--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@
 .player-card {
     margin: 10px 0px;
 }
+
+.queue-control-panel {
+    margin: 10px 0px;
+}
+
+.queue-control-btn-group {
+    width: 100%;
+    margin: 5px 0px;
+}
