--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     margin: 10px 0px;
 }
 
-.queue-control-btn-group {
+.queue-control-btn-group, .full-width-btn {
     width: 100%;
     margin: 5px 0px;
 }
